--- a/custom_components/math_tools/manifest.json
+++ b/custom_components/math_tools/manifest.json
@@ -1,11 +1,12 @@
 {
-    "domain": "math_tools",
-    "name": "Math Tools",
-    "version": "1.0.0",
-    "documentation": "https://example.local/math_tools",
-    "codeowners": ["@you"],
-    "requirements": ["aiohttp>=3.9.0"],
-    "iot_class": "local_push",
-    "dependencies": ["conversation"],
-    "loggers": ["custom_components.math_tools"]
-    }
+  "domain": "math_tools",
+  "name": "Math Tools",
+  "version": "1.1.0",
+  "documentation": "https://example.local/math_tools",
+  "codeowners": ["@you"],
+  "requirements": ["aiohttp>=3.9.0"],
+  "iot_class": "local_push",
+  "dependencies": ["conversation"],
+  "loggers": ["custom_components.math_tools"],
+  "config_flow": true
+}
